--- a/index.html
+++ b/index.html
@@ -1,1 +1,313 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Portfolio</title>
+</head>
+<body>
+    <div class="hero">
+        <div class="overlay">
+            <header>
+                <div class="logo-container">
+                    <img src="./assets/icon/logo.svg" alt="Logotipo Christian Rojas">
+                </div>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#" class="selected">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">Projects</a>
+                        </li>
+                        <li>
+                            <a href="#">Blog</a>
+                        </li>
+                        <li>
+                            <a href="#">Services</a>
+                        </li>
+                        <li>
+                            <a href="#">Contact</a>
+                        </li>
+                        <li>
+                            <a class="cta-chat">Chat with me</a>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="hero-title">
+                <h1>UI/UX Designer<br>& Developer</h1>
+                <p>Hi! I´m Christian Rojas. A passionate UI/UX<br>Designer and Front-end Developer</p>
+                <a href="#">Know my projects</a>
+            </div>
+            <div class="cta-down-container">
+                <a href="#"><img src="./assets/icon/down.svg"></a>
+            </div>
+        </div>
+    </div>
+    <main class="main">
+        <section class="main-benefits">
+            <h3>Featured benefits of working with me:</h3>
+            <div class="benefits-container">
+                <div class="benefit">
+                    <div class="benefit-img">
+                        <img src="./assets/icon/eternal-apprentice.svg" alt="Icono de Eternal Apprentice">
+                    </div>
+                    <p>Eternal<br>Apprentice</p>
+                </div>
+                <div class="benefit">
+                    <div class="benefit-img">
+                        <img src="./assets/icon/teaching.svg" alt="Icono de Love Teaching">
+                    </div>
+                    <p>I Love<br>Teaching</p>
+                </div>
+                <div class="benefit">
+                    <div class="benefit-img">
+                        <img src="./assets/icon/focus-clarity.svg" alt="Icono de Focus & Clarity">
+                    </div>
+                    <p>Focus<br>& Clarity</p>
+                </div>
+                <div class="benefit">
+                    <div class="benefit-img">
+                        <img src="./assets/icon/eternal-apprentice.svg" alt="icono de Teamwork">
+                    </div>
+                    <p>Teamwork</p>
+                </div>
+                <div class="benefit">
+                    <div class="benefit-img">
+                        <img src="./assets/icon/Assertive-communication.svg" alt="Icono de Assertive Communication">
+                    </div>
+                    <p>Assertive<br>Communication</p>
+                </div>
+            </div>
+        </section>
+        <section class="portfolio">
+            <div class="portfolio-left">
+                <div class="algin-tablet-porfolio-title">
+                    <div class="portfolio-title">
+                        <div class="title-adorno">
+                            <div class="adorno-top">
+                                <div class="bolita"></div>
+                                <div class="bolita"></div>
+                                <div class="bolita"></div>
+                                <div class="bolita"></div>
+                                <div class="bolita"></div>
+                                <div class="bolita"></div>
+                            </div>
+                            <div class="adorno-middle">
+                                <div class="bolita"></div>
+                                <div class="bolita"></div>
+                                <div class="bolita"></div>
+                                <div class="bolita"></div>
+                                <div class="bolita"></div>
+                                <div class="bolita"></div>
+                            </div>
+                            <div class="adorno-down">
+                                <div class="bolita"></div>
+                                <div class="bolita"></div>
+                                <div class="bolita"></div>
+                                <div class="bolita"></div>
+                                <div class="bolita"></div>
+                                <div class="bolita"></div>
+                            </div>
+                        </div>
+                        <div class="title">
+                            <h2>Descubre mis proyectos<br>más recientes</h2>
+                        </div>
+                    </div>
+                    <div class="btn-ver-mar-container">
+                        <a href="#" class="btn-ver-mas">¡Quiero ver más!</a>
+                    </div>
+                </div>
+                <div class="main-img-portfolio">
+                    <img src="./assets/img/amico.png" alt="Imagen principal de la sección del portafolio">
+                </div>
+            </div>
+            <div class="portfolio-right">
+                <div class="portfolio-projects-left">
+                    <div class="project"></div>
+                    <div class="project"></div>
+                </div>
+                <div class="portfolio-projects-right">
+                    <div class="project"></div>
+                    <div class="project"></div>
+                </div>
+            </div>
+        </section>
+        <section class="technologies">
+            <h3>Tecnologías con las que trabajo</h3>
+            <div class="technologies-container-top">
+                <img src="./assets/icon/html5.svg" alt="Icono HTML5">
+                <img src="./assets/icon/css3.svg" alt="Icono CSS3">
+                <img src="./assets/icon/javascript.svg" alt="Icono javascript">
+                <img src="./assets/icon/react.svg" alt="Icono React">
+                <img src="./assets/icon/typescript.svg" alt="Icono typescript">
+                <img src="./assets/icon/nodejs.svg" alt="Icono Node">
+            </div>
+            <div class="technologies-container-down">
+                <img src="./assets/icon/github.svg" alt="Icono de GitHub">
+                <img src="./assets/icon/figma.svg" alt="Icono de Figma">
+                <img src="./assets/icon/terminal.svg" alt="icono de Terminal">
+                <img src="./assets/icon/git.svg" alt="icono de Git">
+                <img src="./assets/icon/linux.svg" alt="Icono de Linux">
+                <img src="./assets/icon/npm.svg" alt="Icono de NPM">
+                <img src="./assets/icon/wordpress.svg" alt="Icono de Wordpress">
+            </div>
+        </section>
+        <section class="resources">
+           <div class="resources-title">
+            <h2>¿En qué te puedo ayudar?</h2>
+            <span class="line-title"></span>
+           </div>
+            <div class="resources-container">
+                <div class="resource-card">
+                    <div class="resource-card--img">
+                        <img src="./assets/img/bro.png" alt="">
+                    </div>
+                    <div class="resource-card--tag">
+                        <a href="#">Desarrollo web</a>
+                    </div>
+                    <div class="resource-card-info-container">
+                        <div class="resource-card-info">
+                            <h4>Título del ebook</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent porta erat pellentesque diam consequat, sit amet lacinia tortor sollicitudin.</p>
+                        </div>
+                        <div class="btn-dw-container">
+                            <a href="#">Descargar</a>
+                        </div>
+                    </div>          
+                </div>
+                <div class="resource-card">
+                    <div class="resource-card--img">
+                        <img src="./assets/img/bro.png" alt="">
+                    </div>
+                    <div class="resource-card--tag">
+                        <a href="#">Desarrollo web</a>
+                    </div>
+                    <div class="resource-card-info-container">
+                        <div class="resource-card-info">
+                            <h4>Título del ebook</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent porta erat pellentesque diam consequat, sit amet lacinia tortor sollicitudin.</p>
+                        </div>
+                        <div class="btn-dw-container">
+                            <a href="#">Descargar</a>
+                        </div>
+                    </div>          
+                </div>
+                <div class="resource-card">
+                    <div class="resource-card--img">
+                        <img src="./assets/img/bro.png" alt="">
+                    </div>
+                    <div class="resource-card--tag">
+                        <a href="#">Desarrollo web</a>
+                    </div>
+                    <div class="resource-card-info-container">
+                        <div class="resource-card-info">
+                            <h4>Título del ebook</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent porta erat pellentesque diam consequat, sit amet lacinia tortor sollicitudin.</p>
+                        </div>
+                        <div class="btn-dw-container">
+                            <a href="#">Descargar</a>
+                        </div>
+                    </div>          
+                </div>
+            </div>
+            <div class="cta-resources-container">
+                <a href="#" class="cta-descubre-mas">Descubre más recursos</a>
+            </div>
+        </section>
+        <section class="social-media">
+            <div class="social-media-left">
+                <div class="social-media-title">
+                    <p>Social Media</p>
+                    <h2>¡No te pierdas las últimas<br> actualizaciones!</h2>
+                </div>
+                <div class="social-media-cards">
+                    <div class="social-media-cards-left">
+                        <a href="#">
+                            <div class="card-social-media">
+                                <div class="card-rrss-title">
+                                    <h4>Twitter</h4>
+                                    <p>Random Thoughts</p>
+                                </div>
+                                <div class="card-rrss-img">
+                                    <img src="./assets/icon/twitter.svg" alt="Icon twitter">
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="card-social-media">
+                                <div class="card-rrss-title">
+                                    <h4>Behance</h4>
+                                    <p>Portfolio UX/UI Design</p>
+                                </div>
+                                <div class="card-rrss-img">
+                                    <img src="./assets/icon/behance.svg" alt="Icon behance">
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="card-social-media">
+                                <div class="card-rrss-title">
+                                    <h4>GitHub</h4>
+                                    <p>Portfolio Front-end</p>
+                                </div>
+                                <div class="card-rrss-img">
+                                    <img src="./assets/icon/github-footer.svg" alt="Icon twitter">
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="social-media-cards-right">
+                        <a href="#">
+                            <div class="card-social-media">
+                                <div class="card-rrss-title">
+                                    <h4>Instagram</h4>
+                                    <p>My Fronte-end life</p>
+                                </div>
+                                <div class="card-rrss-img">
+                                    <img src="./assets/icon/instagram.svg" alt="Icon twitter">
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="card-social-media">
+                                <div class="card-rrss-title">
+                                    <h4>Email</h4>
+                                    <p>email@example.com</p>
+                                </div>
+                                <div class="card-rrss-img">
+                                    <img src="./assets/icon/emai.svg" alt="Icon behance">
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="card-social-media">
+                                <div class="card-rrss-title">
+                                    <h4>LinkedIn</h4>
+                                    <p>Professional social profile</p>
+                                </div>
+                                <div class="card-rrss-img">
+                                    <img src="./assets/icon/linkedin.svg" alt="Icon twitter">
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="social-media-right">
+                <div class="rrss-right-img-container">
+                    <img src="./assets/img/rafiki.png" alt="Imagen haciendo referencia a las redes sociales">
+                </div>
+            </div>
+        </section>
+        <footer class="footer">
+            <p>All right reserved by <span>Christian Rojas</span> | Developed with &lt;3</p>
+        </footer>
+    </main>
+</body>
+</html>
